# Ejemplo0Distribuidos

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  client  client.cpp  clienteObjetos  clienteObjetos.cpp  operaciones.h  persona.h  persona_imp.h  persona_stub.h  server  server.cpp  serverObjetos.cpp  utils.h
